--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "node ./scripts/db-push.js",
     "db:admin": "node ./scripts/db-admin.js",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:view": "node ./scripts/db-viewer.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -24,6 +25,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.43.1",
     "next": "15.3.1",
