--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@neondatabase/serverless": "^1.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
@@ -35,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
+    "vercel": "^41.7.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
