--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "drizzle-orm": "^0.43.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -44,6 +45,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
