--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db:admin": "node ./scripts/db-admin.js",
     "db:studio": "drizzle-kit studio",
     "db:studio:fix": "node ./scripts/launch-studio.js",
-    "db:view": "node ./scripts/db-viewer.js"
+    "db:view": "node ./scripts/db-viewer.js",
+    "db:add-priority": "node ./scripts/add-priority-column.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
